--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
      body{
     background-color: midnightblue;
      }
+     title{color: aliceblue;
+
+     }
      p{color: floralwhite;
 
      }
