--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      body{
     background-color: midnightblue;
      }
-     title{color: aliceblue;
+     h1{color: aliceblue;
 
      }
      p{color: floralwhite;
